# kindly-web-search-mcp-server

./: README.md  pyproject.toml
src/kindly_web_search_mcp_server/scrape/: extract.py
