[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kindly-web-search-mcp-server"
version = "0.1.8"
description = "MCP server: Serper web search + robust content retrieval."
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mcp",
    "pydantic",
    "httpx",
    "beautifulsoup4",
    "markdownify",
    "trafilatura",
    "nodriver",
    "PyMuPDF",
]

[project.optional-dependencies]
dev = ["pytest", "ruff"]
# Optional extras for improved PDF-to-Markdown conversion on supported Python versions.
# These pull in `onnxruntime` transitively (via `pymupdf-layout`), which may not have wheels
# for the newest CPython releases (e.g., cp314). Keeping them optional avoids install
# failures while preserving a simple text-extraction baseline via PyMuPDF.
pdf-advanced = [
    "pymupdf-layout>=1.26.6; python_version < '3.14'",
    "pymupdf4llm>=0.2.7; python_version < '3.14'",
]

[project.scripts]
mcp-server = "kindly_web_search_mcp_server.server:main"
mcp-web-search = "kindly_web_search_mcp_server.server:main"
kindly-web-search = "kindly_web_search_mcp_server.server:main"
kindly-web-search-mcp-server = "kindly_web_search_mcp_server.cli:main"
